--- a/css/styles.css
+++ b/css/styles.css
@@ -1,503 +1,521 @@
-@import url('https://fonts.googleapis.com/css2?family=La+Belle+Aurore&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=La+Belle+Aurore&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Domine&display=swap');
 *,
 ::before,
-::after{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+::after {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
-body{
-    font-family: sans-serif;
-    color: rgb(255, 255, 255);
-    background: #d1ccc7;
+body {
+	font-family: 'Domine', serif;
+	color: rgb(255, 255, 255);
+	background: #d1ccc7;
+	cursor: none;
 }
-header{
-    width: 95%;
-    height: 10vh;
-    margin: auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: fixed;
-    z-index: 999;
-  
+header {
+	width: 95%;
+	height: 10vh;
+	margin: auto;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	position: fixed;
+	z-index: 999;
 }
-#sound{
-    padding: 7px;
-    background-color: #1b1b1b;
-    border-radius: 5px;
-    display: flex;
-    align-items: center;
-    color: #fff;
-    z-index: 999;
-    
+#sound {
+	padding: 7px;
+	background-color: #1b1b1b;
+	border-radius: 5px;
+	display: flex;
+	align-items: center;
+	color: #fff;
+	z-index: 999;
 }
-.sound-cloud{
-    font-size: 1.2rem;
-    margin: 7px;
-    color: #f50057;
-    z-index: 999;
+.sound-cloud {
+	font-size: 1.2rem;
+	margin: 7px;
+	color: #f50057;
+	z-index: 999;
 }
-.on-off{
-    cursor: pointer;
-    margin-left: 5px;
-    z-index: 999;
+.on-off {
+	cursor: pointer;
+	margin-left: 5px;
+	z-index: 999;
 }
-#off{
-    color: #f50057;
-    z-index: 999;
-
+#off {
+	color: #f50057;
+	z-index: 999;
 }
-#on{
-    display: none;
-    color: #08fdd8;
+#on {
+	display: none;
+	color: #08fdd8;
 }
-.btns-container .fas{
-    font-size: 2rem;
-    padding: 10px;
-    background-color: #181818;
-    color: #fff;
-    cursor: pointer;
-    z-index: 999;
+.btns-container .fas {
+	font-size: 2rem;
+	padding: 10px;
+	background-color: #181818;
+	color: #fff;
+	cursor: pointer;
+	z-index: 999;
 }
-.btns-container .fas:nth-child(2){
-    display: none;
+.btns-container .fas:nth-child(2) {
+	display: none;
 }
 
 /* aside section starts here */
-.aside{
-    max-width: 150px;
-    width: 100%;
-    height: 0;
-    position: fixed;
-    top: 0;
-    left: 0;
-    overflow: hidden;
-    background-color: #edebe9;
-    z-index: 1;
-    box-shadow: 2px 2px 10px#b1b1b1; 
+.aside {
+	max-width: 150px;
+	width: 100%;
+	height: 0;
+	position: fixed;
+	top: 0;
+	left: 0;
+	overflow: hidden;
+	background-color: #edebe9;
+	z-index: 1;
+	box-shadow: 2px 2px 10px#b1b1b1;
 }
-.show-nav{
-    height: 100%;
-    overflow: visible;
+.show-nav {
+	height: 100%;
+	overflow: visible;
 }
-.aside-wrapper{
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    flex-direction: column;
+.aside-wrapper {
+	height: 100vh;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	flex-direction: column;
 }
-.logo-section{
-    min-height: 32vh;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background-color: #edebe9;
-    color: #333;
+.logo-section {
+	min-height: 32vh;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	background-color: #edebe9;
+	color: #333;
 }
-.logo{
-    display: grid;
-    place-items: center;
-    text-decoration: none;
+.logo {
+	display: grid;
+	place-items: center;
+	text-decoration: none;
 }
-.logo img{
-    width: 45px;
-    height: auto;
+.logo img {
+	width: 45px;
+	height: auto;
 }
-.logo span{
-    font-size: 1.7rem;
-    color: rgb(3, 3, 3);
-    font-weight: 700;
-   
+.logo span {
+	font-size: 1.7rem;
+	color: rgb(3, 3, 3);
+	font-weight: 700;
 }
-.logo-section > span{
-    margin-top: 25px;
-    font-size: 16px;
-    font-size: 'Times New Roman', Times, serif;
+.logo-section > span {
+	margin-top: 25px;
+	font-size: 16px;
+	font-size: "Times New Roman", Times, serif;
 }
 
 /* nav section starts here */
 
-.nav-links a{
-    display: block;
-    text-align: center;
-    line-height: 3rem;
-    text-decoration: none;
-    color: #032a24;
+.nav-links a {
+	display: block;
+	text-align: center;
+	line-height: 3rem;
+	text-decoration: none;
+	color: #032a24;
 }
-.nav-links a:hover{
-    color: #08fdd8;
+.nav-links a:hover {
+	color: #f50057;
 }
-.nav-links a::before{
-    content: '';
-    width: 100%;
-    height: 1px;
-    position: absolute;
-    left: 0;
-    background-color: #2d2d2e;
+.nav-links a::before {
+	content: "";
+	width: 100%;
+	height: 1px;
+	position: absolute;
+	left: 0;
+	background-color: #2d2d2e;
 }
 
 /* social icons */
 
-.social-icons{
-    list-style: none;
-    display: flex;
-    margin-bottom: 30px;
+.social-icons {
+	list-style: none;
+	display: flex;
+	margin-bottom: 30px;
 }
-.social-icons li{
-    width: 30px;
-    font-size: 1rem;
+.social-icons li {
+	width: 30px;
+	font-size: 1rem;
 }
-.social-icons li a{
-    text-decoration: none;
-    color: #909096;
+.social-icons li a {
+	text-decoration: none;
+	color: #909096;
 }
-.social-icons li a:hover{
-    color: #08fdd8;
+.social-icons li a:hover {
+	color: #08fdd8;
 }
 
 /* nav bar ends here */
 
-#section-home{
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
-    padding-left: 1.5rem;
-  
+#section-home {
+	min-height: 100vh;
+	display: flex;
+	align-items: center;
+	padding-left: 1.5rem;
 }
-
 
 .text-zone h1 {
-    font-size: 3rem;
-    line-height: 45px;
-    letter-spacing: -3px;
-    position: relative;
-    z-index: 2;
+	font-size: 3rem;
+	line-height: 45px;
+	letter-spacing: -3px;
+	position: relative;
+	z-index: 2;
 }
-.text-zone h1::before{
-    content: ' <h1>';
-    position: absolute;
-    top: -80px;
-    left: -10px;
-    font-size: 1.2rem;
-    font-family: 'La Belle Aurore', cursive;
-    color: #666565;
-    letter-spacing: 3px;
+
+.text-zone h1::before {
+	content: " <h1>";
+	position: absolute;
+	top: -60px;
+	left: -10px;
+	font-size: 1.2rem;
+	font-family: "La Belle Aurore", cursive;
+	color: #666565;
+	letter-spacing: 3px;
 }
-.text-zone h1::after{
-    content: '</h1>';
-    position: absolute;
-    bottom: -10px;
-    right: -70px;
-    font-size: 1.2rem;
-    font-family: 'La Belle Aurore', cursive;
-    color: #666565;
-    letter-spacing: 3px;
+.text-zone h1::after {
+	content: "</h1>";
+	position: absolute;
+	bottom: -10px;
+	right: -70px;
+	font-size: 1.2rem;
+	font-family: "La Belle Aurore", cursive;
+	color: #666565;
+	letter-spacing: 3px;
 }
-.text-zone img{
-    width: 35px;
-    height: 50px;
+
+.gray-text {
+	position: relative;
 }
-.text-zone .gray-text{
-    margin-top: 30px;
-    color: #474747;
-    letter-spacing: 3px;
-    font-size: 14px;
-    position: relative;
+
+.gray-text::before { 
+	content: " <p>";
+	position: absolute;
+	top: -28px;
+	left: -10px;
+	font-size: 1.2rem;
+	font-family: "La Belle Aurore", cursive;
+	color: #666565;
+	letter-spacing: 3px;
+}
+.gray-text::after { 
+	content: " <p>";
+	position: absolute;
+	bottom: -28px;
+	left: -10px;
+	font-size: 1.2rem;
+	font-family: "La Belle Aurore", cursive;
+	color: #666565;
+	letter-spacing: 3px;
+}
+
+
+
+.text-zone img {
+	width: 35px;
+	height: 50px;
+}
+.text-zone .gray-text {
+	margin-top: 50px;
+	color: #474747;
+	letter-spacing: 3px;
+	font-size: 14px;
+	position: relative;
 }
 
 /* contact me button */
-.contact-button{
-    text-decoration: none;
-    width: 100%;
-    max-width: 200px;
-    height: 40px;
-    display: block;
-    line-height: 40px;
-    letter-spacing: 3px;
-    position: relative;
-    text-align: center;
-    color: #080808;
-    margin-top: 50px;
-    z-index: 999;
+.contact-button {
+	text-decoration: none;
+	width: 100%;
+	max-width: 200px;
+	height: 40px;
+	display: block;
+	line-height: 40px;
+	letter-spacing: 3px;
+	position: relative;
+	text-align: center;
+	color: #080808;
+	margin-top: 50px;
+	z-index: 999;
 }
-.contact-button div{
-    position: relative;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-    transition:  all .3s ease-in-out;
+.contact-button div {
+	position: relative;
+	width: 100%;
+	height: 100%;
+	overflow: hidden;
+	transition: all 0.3s ease-in-out;
 }
-.contact-button span.bg{
-    position: absolute;
-    width: 0%;
-    height: 100%;
-    left: -5px;
-    top: 0;
-    transition: all .3s ease-in-out;
-    background-color: #ffffff;
-    transform: skewX(-19deg);
-    
+.contact-button span.bg {
+	position: absolute;
+	width: 0%;
+	height: 100%;
+	left: -5px;
+	top: 0;
+	transition: all 0.3s ease-in-out;
+	background-color: #ffffff;
+	transform: skewX(-19deg);
 }
-.contact-button:hover span.bg{
-    width: 110%;
+.contact-button:hover span.bg {
+	width: 110%;
 }
-.contact-button span.base{
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    left: 0;
-    border: 2px solid #ffffff;
-    box-sizing: border-box;
-    
+.contact-button span.base {
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	left: 0;
+	border: 2px solid #ffffff;
+	box-sizing: border-box;
 }
-.contact-button span.text{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    
+.contact-button span.text {
+	position: absolute;
+	width: 100%;
+	height: 100%;
+	top: 0;
+	left: 0;
 }
-.contact-button:hover span.text{
-    color: #f50057;
+.contact-button:hover span.text {
+	color: #f50057;
 }
-.scroll-down{
-    position: absolute;
-    right: -20px;
-    bottom: 3.3rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    transform: rotate(90deg);
-    display: block;
-    font-size: 14px;
+.scroll-down {
+	position: absolute;
+	right: -20px;
+	bottom: 3.3rem;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+	transform: rotate(90deg);
+	display: block;
+	font-size: 14px;
 }
-.scroll-down--left{
-    left: -30px;
-    right: auto;
+.scroll-down--left {
+	left: -30px;
+	right: auto;
 }
-.scroll-down span{
-    display: inline-block;
-    animation: scroll .5s linear infinite alternate-reverse;
+.scroll-down span {
+	display: inline-block;
+	animation: scroll 0.5s linear infinite alternate-reverse;
 }
-@keyframes scroll{
-    0%{
-        transform: translateX(-7px);
-    }
-    100%{
-        transform: translateX(7px);
-    }
+@keyframes scroll {
+	0% {
+		transform: translateX(-7px);
+	}
+	100% {
+		transform: translateX(7px);
+	}
 }
-.scroll-down .fas{
-    transform: rotate(270deg);
-    margin-left: 10px;
+.scroll-down .fas {
+	transform: rotate(270deg);
+	margin-left: 10px;
 }
 
-/* part 2 starts here */ /* part 2 starts here *//* part 2 starts here */
+/* part 2 starts here */ /* part 2 starts here */ /* part 2 starts here */
 
-#section-work{
-    padding: 5rem 0 5rem 1.5rem;
-    position: relative;
+#section-work {
+	padding: 5rem 0 5rem 1.5rem;
+	position: relative;
 }
-#header{
-    font-size: 2rem;
-    color: #08fdd8;
-    margin-bottom: 30px;
+#header {
+	font-size: 2rem;
+	color: #2c2c2c;
+	margin-bottom: 30px;
 }
-.text-zone-2 p{
-    color: #181818;
-    line-height: 1.5;
+.text-zone-2 p {
+	color: #181818;
+	line-height: 1.5;
 }
-.fake-big-2{
-    font-size: 12rem;
-    font-weight: 700;
-    position: absolute;
-    color: #2d2d2e31;
-    left: 10px;
-    bottom: -70px;
-    letter-spacing: -10px;
-    z-index: -999;
+.fake-big-2 {
+	font-size: 12rem;
+	font-weight: 700;
+	position: absolute;
+	color: #2d2d2e31;
+	left: 10px;
+	bottom: -70px;
+	letter-spacing: -10px;
+	z-index: -999;
 }
-.fake-magicwall{
-    margin-left: 10%;
-    background-color: rgba(255, 255, 255, 0.1);
+.fake-magicwall {
+	margin-left: 10%;
+	background-color: rgba(255, 255, 255, 0.1);
 }
-.fake-magicwall ul{
-    list-style: none;
-    display: flex;
-    display: -ms-flexbox;
-    display: -webkit-box;
-    flex-wrap: wrap;
+.fake-magicwall ul {
+	list-style: none;
+	display: flex;
+	display: -ms-flexbox;
+	display: -webkit-box;
+	flex-wrap: wrap;
 }
-.fake-magicwall ul li{
-    width: 161px;
-    height: 160px;
-    position: relative;
-    overflow: hidden;
-    display: list-item;
+.fake-magicwall ul li {
+	width: 161px;
+	height: 160px;
+	position: relative;
+	overflow: hidden;
+	display: list-item;
 }
-.fake-magicwall .magic-wall_item{
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    transition: transform 0.5s, opacity 0.5s;
-    transition: transform 0.5s, opacity 0.5s, -webkit-transform 0.5s;
+.fake-magicwall .magic-wall_item {
+	position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	transition: transform 0.5s, opacity 0.5s;
+	transition: transform 0.5s, opacity 0.5s, -webkit-transform 0.5s;
 }
-.fake-magicwall img{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-
-.fake-magicwall ul li:hover .magic-wall_item{
-    transform: scale(1.14);
-    -ms-transform: scale(1.4);
-    -webkit-transform: scale(1.14);
-}
-.fake-magicwall ul li a.colorbox{
-    display: block;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: url(../images/circle.png) no-repeat center;
-    opacity: 0;
-    transition: all 150ms ease-out;
-    -o-transition: all 150ms ease-out;
-    -webkit-transition: all 150ms ease-out;
-    transform: scale(0.2);
-}
-.fake-magicwall ul li:hover a.colorbox{
-    transform: scale(0.6);
-    opacity: 1;
+.fake-magicwall img {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
 }
 
-
+.fake-magicwall ul li:hover .magic-wall_item {
+	transform: scale(1.14);
+	-ms-transform: scale(1.4);
+	-webkit-transform: scale(1.14);
+}
+.fake-magicwall ul li a.colorbox {
+	display: block;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background: url(../images/circle.png) no-repeat center;
+	opacity: 0;
+	transition: all 150ms ease-out;
+	-o-transition: all 150ms ease-out;
+	-webkit-transition: all 150ms ease-out;
+	transform: scale(0.2);
+}
+.fake-magicwall ul li:hover a.colorbox {
+	transform: scale(0.6);
+	opacity: 1;
+}
 
 /* media section for bigger screens */
 
-
 @media screen and (min-width: 950px) {
-    header{
-        justify-content: flex-end;
-        align-items: flex-end;
-    }
-    .btns-container{
-        display: none;
-    }
+	header {
+		justify-content: flex-end;
+		align-items: flex-end;
+	}
+	.btns-container {
+		display: none;
+	}
 
-    .aside{
-        width: 15%;
-        height: 100%;
-        z-index: 999;
-    }
-    .aside-wrapper{
-        height: 80%;
-    }
-    .logo-section{
-        min-height: 25vh;
-    }
-    .logo img{
-        width: 50px;
-        height: auto;
-    }
-    .social-icons{
-        margin-bottom: 0;
-        text-align: center;
-    }
-    .social-icons li{
-       
-        font-size: 1rem;
-    }
+	.aside {
+		width: 15%;
+		height: 100%;
+		z-index: 999;
+	}
+	.aside-wrapper {
+		height: 80%;
+	}
+	.logo-section {
+		min-height: 25vh;
+	}
+	.logo img {
+		width: 50px;
+		height: auto;
+	}
+	.social-icons {
+		margin-bottom: 0;
+		text-align: center;
+	}
+	.social-icons li {
+		font-size: 1rem;
+	}
 
-    /* home section */
-    #section-home{
-        padding-left: 13rem;
-    }
-    .text-zone h1{
-        font-size: 6.3rem;
-        line-height: 85px;
-        letter-spacing: -6px;
-    }
-    .text-zone img{
-        width: 50px;
-        height: 72px;
-    }
-    .text-zone .gray-text{
-        font-size: clamp(22px, 1vw, 5%);
+	/* home section */
+	#section-home {
+		padding-left: 13rem;
+	}
+	.text-zone h1 {
+		font-size: 6.3rem;
+		line-height: 85px;
+		letter-spacing: -6px;
+	}
+	.text-zone img {
+		width: 50px;
+		height: 72px;
+	}
+	.text-zone .gray-text {
+		font-size: clamp(22px, 1vw, 5%);
+	}
+	.scroll-down {
+		right: -30px;
+		bottom: 3.3rem;
+	}
+	.scroll-down--left {
+		left: 110px;
+		right: auto;
+	}
+	/* this is tht end of section home */
 
-    }
-    .scroll-down{
-        right: -30px;
-        bottom: 3.3rem;
-    }
-    .scroll-down--left{
-        left: 110px;
-        right: auto;
-    }
-    /* this is tht end of section home */
-
-    /* part 2 media query bigger screens starts here */
-    #section-work{
-        width: 85%;
-        margin: 0 30px 0 auto;
-        display: flex;
-        flex-direction: column;
-    }
-    .text-zone-2{
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-    #header{
-        font-size: 2.5rem;
-    }
-    .text-zone-2 p{
-        width: 700px;
-        font-size: 14px;
-        line-height: 1.5rem;
-    }
-    .fake-big-2{
-        font-size: 25rem;
-        font-weight: 700;
-        left: 560px;
-        top: 0;
-    }
-    .fake-magicwall{
-        padding-left: 8.5rem;
-    }
-    .fake-magicwall ul li{
-        width: 242px;
-        height: 236px;
-    }
-
-
-
+	/* part 2 media query bigger screens starts here */
+	#section-work {
+		width: 85%;
+		margin: 0 30px 0 auto;
+		display: flex;
+		flex-direction: column;
+	}
+	.text-zone-2 {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+	}
+	#header {
+		font-size: 2.5rem;
+	}
+	.text-zone-2 p {
+		width: 700px;
+		font-size: 14px;
+		line-height: 1.5rem;
+	}
+	.fake-big-2 {
+		font-size: 25rem;
+		font-weight: 700;
+		left: 560px;
+		top: 0;
+	}
+	.fake-magicwall {
+		padding-left: 8.5rem;
+	}
+	.fake-magicwall ul li {
+		width: 242px;
+		height: 236px;
+	}
 }
-
 
 /* Animate Hero Section  */
 
+.text-zone { 
+	color: rgb(42, 42, 42);
+}
+
 .alpha {
 	display: inline-block;
-	color: #333;
+	
 	font-size: clamp(42px, 5.5vw, 84px);
-	font-family: "Domine", sans-serif;
+	
 }
 
 .alpha.animated {
+	
+	font-family: 'Domine', serif;
 	color: #ffffff;
 	animation: ani 0.3s ease-in-out 1;
-	cursor: pointer;
 }
 
 @keyframes ani {
@@ -536,12 +554,17 @@ header{
 	}
 }
 
-#canvas1 { 
-    position: absolute;
+#canvas1 {
+	position: absolute;
 	background: rgba(0, 0, 0, 0);
 	width: 100%;
 	height: 100%;
 	top: 0;
 	left: 0;
 	z-index: 1;
+}
+
+ #accent-color  { 
+	text-shadow: 1px 1px 6px#08fdd8;
+	color: #f50057 !important;
 }
